# ReinaManager

./: .cz.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.en_US.md  README.ja_JP.md  README.md  README.zh_CN.md  README.zh_TW.md  biome.json  cliff.toml  i18n.d.ts  i18next.config.ts  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build-common.yml  build.yml  page.yml  release.yml
assets/: Backup-BC1OJAst.js  Backup-BHwHgNz2.js  Backup-BTteFKqM.js  Backup-CNuRFoRK.js  Backup-CrcWu9Ba.js  Backup-DA9Okq4n.js  Backup-DNS0hBNH.js  Backup-DV3rJrls.js  Backup-DbmmUNZt.js  Backup-Dd9jlBoB.js  Backup-Dm7bix2T.js  Backup-a9nuS87o.js  Card-Am9SvCVU.js  Card-Cv_QRcPQ.js  Card-CwzTqM5A.js  Card-DGqE3S-M.js  Card-Dtqww2Gd.js  Card-ya8r1nPe.js  CardContent-Cd_vaanZ.js  CardContent-Cv5ybpI2.js  CardContent-DjPLV2Ij.js  CardContent-DoDA4r5m.js  CardContent-E1aEugSG.js  CardContent-eK6lftFM.js  Edit-C0t3gI_1.js  Edit-C9mjews6.js  Edit-C_lb14s7.js  Edit-CdYYuOkY.js  Edit-DOxlJE_v.js  Edit-DkbWMdPe.js  InfoBox-C_yK5dB6.js  InfoBox-CeQKS-vp.js  InfoBox-CiVrmhF5.js  InfoBox-DSw_4j0k.js  InfoBox-DcAO7eej.js  InfoBox-iKOthndP.js  Restore-C2u-nJLV.js  Restore-Cd9TDAuU.js  Restore-D8EbB8WJ.js  Restore-Ns8wn1FT.js  (+66 more)
src/: App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: backup.rs  lib.rs  m20250927_000001_baseline_migration.rs  m20250928_000002_split_games_table.rs  m20251229_000004_hybrid_single_table.rs  m20260104_000005_add_le_magpie_fields.rs
src-tauri/reina-path/: Cargo.toml
src-tauri/reina-path/src/: lib.rs
src-tauri/src/: database.rs  entity.rs  lib.rs  utils.rs
src-tauri/src/backup/: savedata.rs
src-tauri/src/database/: connection.rs  db.rs  dto.rs  service.rs
src-tauri/src/database/repository/: collections_repository.rs  games_repository.rs  settings_repository.rs
src-tauri/src/entity/: bgm_data.rs  custom_data.rs  games.rs  prelude.rs  user.rs  vndb_data.rs  ymgal_data.rs
src-tauri/src/game/launch/: linux.rs
src-tauri/src/game/monitor/: linux.rs
src-tauri/src/utils/: db.rs  fs.rs  game_monitor.rs  launch.rs  logs.rs  scan.rs
src-tauri/src/utils/game_monitor/: linux.rs
src/api/: bgm.ts  gameMetadataService.ts  http.ts  index.ts  mixed.ts  vndb.ts  ymgal.ts
src/components/: LaunchModal.tsx
src/components/AddModal/: GameSelectDialog.tsx  index.tsx
src/components/AlertBox/: index.tsx
src/components/Cards/: index.tsx
src/components/Collection/: EntityCard.tsx  ManageGamesDialog.tsx  index.tsx
src/components/CommonDialog/: index.tsx
src/components/LaunchModal/: index.tsx
src/components/Layout/: index.tsx
src/components/LinkWithScrollSave/: index.tsx
src/components/PathSettingsModal/: index.tsx
src/components/RightMenu/: BaseRightMenu.tsx  CollectionRightMenu.tsx  RightMenu.tsx  index.tsx
src/components/ScanLib/: index.tsx
src/components/SearchBox/: index.tsx
src/components/Toolbar/: Collection.tsx  Toolbar.tsx  index.tsx
src/components/Tray/: index.ts
src/components/Window/: index.tsx
src/hooks/: useDebouncedValue.ts  useImagePreview.ts  useScrollRestore.ts  useVirtualCollections.ts
src/locales/: _VndbTag_zh_CN.json  en-US.json  en_US.json  ja-JP.json  ja_JP.json  zh-CN.json  zh-TW.json  zh_CN.json  zh_TW.json
src/pages/Collection/: index.tsx
src/pages/Detail/: Backup.tsx  DataSourceUpdate.tsx  Edit.tsx  GameInfoEdit.tsx  InfoBox.tsx  index.tsx
src/pages/Home/: index.tsx
src/pages/Settings/: index.tsx
src/routes/: index.tsx
src/services/: collectionService.ts  gameService.ts  savedataService.ts  settingsService.ts  statsService.ts
src/store/: gamePlayStore.ts  index.ts
src/types/: collection.ts  index.ts
src/utils/: customCover.ts  dataTransform.ts  database.ts  enhancedSearch.ts  gameStats.ts  i18n.ts  index.ts  localStorage.ts  tagTranslation.ts
