[package]
name = "ReinaManager"
version = "0.9.0"
description = "A lightweight visual novel manager"
authors = ["huoshen80"]
license = "GNU AFFERO GENERAL PUBLIC LICENSE"
repository = "https://github.com/huoshen80/ReinaManager/"
edition = "2021"
rust-version = "1.90.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "reina_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "~2.5.2", features = [] }

[dependencies]
# Serialization & logging
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

# Tauri core and plugins
tauri = { version = "~2.9.3", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-autostart = "~2.5.0"
tauri-plugin-dialog = "~2.4.0"
tauri-plugin-fs = "~2.4.2"
tauri-plugin-http = "~2.5.2"
tauri-plugin-log = "~2.7.0"
tauri-plugin-shell = "~2.3.1"
tauri-plugin-single-instance = "~2.3.2"
tauri-plugin-updater = "~2.9.0"
tauri-plugin-window-state = "=2.4.1"

# System / utilities
sysinfo = "0.37.2"
sevenz-rust = "0.6.1"
chrono = { version = "0.4.42", features = ["serde"] }

# Async runtime / DB
tokio = { version = "1.48.0", features = ["full"] }
sea-orm = { version = "1.1.19", features = [
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
    "macros",
] }

# Misc
url = "2.5.7"
migration = { path = "migration" }
# Windows system APIs
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_Registry",
    "Win32_System_Diagnostics_ToolHelp",
] }


[profile.dev]
incremental = true # 以较小的步骤编译您的二进制文件。

[profile.release]
codegen-units = 1 # 允许 LLVM 执行更好的优化。
lto = true        # 启用链接时优化。
opt-level = "z"   # 优先考虑小的二进制文件大小。如果您更喜欢速度，请使用 `3`。
panic = "abort"   # 通过禁用 panic 处理程序来提高性能。
# strip = true      # 确保移除调试符号。
