[workspace]
members = ["reina-path", "migration"]

[package]
name = "ReinaManager"
version = "0.16.1"
description = "A lightweight visual novel manager"
authors = ["huoshen80"]
license = "GNU AFFERO GENERAL PUBLIC LICENSE"
repository = "https://github.com/huoshen80/ReinaManager/"
edition = "2021"
rust-version = "1.93.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "reina_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "~2.5.5", features = [] }

[dependencies]
# Serialization & logging
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

# Tauri core and plugins
tauri = { version = "~2.10.2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-autostart = "~2.5.1"
tauri-plugin-dialog = "~2.6.0"
tauri-plugin-fs = "~2.4.5"
tauri-plugin-http = "~2.5.7"
tauri-plugin-log = "~2.8.0"
tauri-plugin-shell = "~2.3.5"
tauri-plugin-single-instance = "~2.4.0"
tauri-plugin-updater = "~2.10.0"
tauri-plugin-process = "~2.3.1"
tauri-plugin-window-state = "=2.4.1"

# System / utilities
sysinfo = "0.38.1"
sevenz-rust2 = "0.20.0"
chrono = { version = "0.4.42", features = ["serde"] }
parking_lot = "0.12"

# Async runtime / DB
tokio = { version = "1.48.0", features = ["full"] }
sea-orm = { version = "1.1.19", features = [
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
    "macros",
] }

# Misc
url = "2.5.8"
migration = { path = "migration" }
reina-path = { path = "reina-path" }

tauri-plugin-store = "2"
dirs = "6.0.0"
[target.'cfg(target_os = "linux")'.dependencies]
xcb = "1.6.0"
zbus = "5.12.0"
zbus_systemd = { version = "0.25800.0", features = ["systemd1"] }
# Windows system APIs
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_Registry",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_Input_KeyboardAndMouse",
] }


[profile.dev]
incremental = true # 以较小的步骤编译您的二进制文件。

[profile.release]
codegen-units = 1 # 允许 LLVM 执行更好的优化。
lto = true        # 启用链接时优化。
opt-level = "z"   # 优先考虑小的二进制文件大小。如果您更喜欢速度，请使用 `3`。
panic = "abort"   # 通过禁用 panic 处理程序来提高性能。
# strip = true      # 确保移除调试符号。
