[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
log = "0.4"
sqlx = { version = "0.8", features = [
  "sqlite",
  "runtime-tokio-native-tls",
  "migrate",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

reina-path = { path = "../reina-path" }
url = "2"

[dependencies.sea-orm-migration]
version = "1.1.0"
features = [
  "runtime-async-std-native-tls",
  "runtime-tokio-native-tls",
  "sqlx-sqlite",
]
